# watcom-mcp-dbg

./: .gitignore  CLAUDE.md  DEFERRED_BREAKPOINTS_COMPLETE.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  check_source_location.py  check_trampolines_context.py  find_later_function.py  list_dwarf_addresses.py  pyproject.toml  pytest.ini  test_address_fix.py  test_address_mismatch.py  test_address_resolution_live.py  test_bp_00123966.py  test_breakpoint.py  test_breakpoint_00123966.py  test_breakpoint_0045240f.py  test_breakpoint_comparison.py  test_breakpoint_detailed.py  test_debugger.py  test_deferred_bp_proper.py  test_deferred_breakpoint.py  test_entry_point_stop.py  test_event_loop_running.py  test_line_program.py  test_mcp_breakpoint.py  test_module_name_match.py  test_offset_breakpoint.py  test_output.txt  test_parser.py  test_pending_breakpoint_hit.py  test_pending_timing.py  test_real_debugging.py  test_run_and_watch_dlls.py  test_simple_deferred.py  test_smackw32_bp.py  test_smackw32_breakpoint.py  test_smackw32_deferred_bp.py  (+12 more)
src/dgb/: __init__.py
src/dgb/debugger/: breakpoint_manager.py  core.py  exceptions.py  module_manager.py  process_controller.py  state.py  win32api.py
tests/: README.md  conftest.py  test_breakpoints_address.py  test_breakpoints_dll.py  test_breakpoints_line.py  test_edge_cases.py  test_execution_control.py  test_mcp_server.py  test_modules.py  test_multiple_breakpoints.py  test_registers.py  test_session_management.py  test_source_display.py  test_variable_inspection.py
tests/fixtures/: compile.bat  compile.sh
(+27 files in other folders)
